--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body {
     color: white;
 }
 h1 {
-    font-family: 'Signika', sans-serif;
+    font-family: 'VT323', monospace;
     font-weight: 700;
-    font-size: 35pt;
+    color: #971cbd;
+    letter-spacing: 3px;
+    font-size: 55pt;
     margin: 40px;
 }
 
