--- a/style.css
+++ b/style.css
@@ -10,8 +10,40 @@ h1 {
     font-weight: 700;
     color: #971cbd;
     letter-spacing: 3px;
-    font-size: 60pt;
-    margin: 25px;
+    font-size: 58pt;
+    margin: auto;
+    margin-top: 30px;
+}
+.dados {
+    font-family: 'Signika', sans-serif;
+    font-weight: 600;
+    width: 430px;
+    margin: auto;
+    padding: 25px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.nome {
+    width: 60px;
+    color: #971cbd;
+    margin-left: -13px;
+}
+.pontos {
+    width: 40px;
+    color: #971cbd;
+    margin-left: -13px;
+}
+.nivel {
+    width: 40px;
+    color: #971cbd;
+    margin-left: -13px;
+}
+.botao {
+    background: #971cbd;
+    color: white;
+    font-weight: 600;
+    border: none;
+    border-radius: 3px;
 }
 
 canvas#snake {
