--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
     color: #971cbd;
     margin-left: -13px;
 }
-.nivel {
+.level {
     width: 40px;
     color: #971cbd;
     margin-left: -13px;
